...
                                self.opacity = 1
                            }
                        }
                Spacer()
                NavigationLink(destination: RegisterView().navigationBarHidden(true)
                    .navigationBarBackButtonHidden(true), label: {
                        Text("Get Started").font(.custom("Poppins-SemiBold", size: 15))
                            .padding(.horizontal)
                            .frame(width: 200,height:50)
                            .background(.black)
                            .foregroundColor(.white)
                            .cornerRadius(60)
                            .accessibilityIdentifier("GetStartedButton") // Added accessibility identifier for UI testing
...
